--- a/curso-sass/modulo-scss/assets/index.html
+++ b/curso-sass/modulo-scss/assets/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="btn btn-laranja">
-        Button
-    </button>
-    <button class="btn btn-vermelho">
-        Button
-    </button>
+    <main>
+        <button class="btn btn-laranja">
+            Button
+        </button>
+        <button class="btn btn-vermelho">
+            Button
+        </button>
+
+        <p>texto com variavel</p>
+    </main>
 </body>
 </html>
