--- a/curso-sass/modulo-scss/assets/index.html
+++ b/curso-sass/modulo-scss/assets/index.html
@@ -15,6 +15,18 @@
             Button
         </button>
 
+        <button class="btn btn-roxo">
+            Button
+        </button>
+
+        <button class="btn btn-amarelo">
+            Button
+        </button>
+
+        <button class="btn btn-dourado">
+            Button
+        </button>
+
         <p>texto com variavel</p>
     </main>
 </body>
